--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -2,7 +2,7 @@
     position: relative;
     transform: translateY(150px);
     opacity: 0;
-    transition: all 2s ease;
+    transition: all 0.8s ease;
 }
 
 .teamReveals.active {
@@ -30,7 +30,8 @@
     .App {
         width: 95% !important;
         /* background-color: red !important; */
-        margin-bottom: 50px !important;
+        margin-bottom: 140px !important;
+        margin-top: 100px !important;
     }
 
     .teamTextH1 {
@@ -112,10 +113,10 @@
 
 @media screen and (min-device-width: 1440px) and (max-device-width: 2560px) {
     .App {
-        height: auto !important;
-        margin-bottom: 30px !important;
+        /* height: auto !important; */
+        /* margin-bottom: 30px !important;
 
-        margin-top: 30px !important;
+        margin-top: 30px !important; */
     }
 
     .teamCardDiv {
@@ -178,7 +179,7 @@
 .teamImg {
     width: 60px !important;
     height: 70px !important;
-    float: left;
+    /* float: left; */
 }
 
 .teamCardDesktop {
@@ -204,6 +205,58 @@
 .teamImgH3,
 .teamImgH6 {
     color: black;
+}
+
+.inSlideCard {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    margin: auto;
+    overflow: hidden;
+}
+
+
+.slide-image {
+    transition: transform 1s;
+}
+
+.slide-image:hover {
+    transform: translateZ(20px);
+    opacity: 0.8;
+}
+
+.team-container {
+    display: grid;
+    place-items: center;
+}
+
+.in-container {
+    height: 240px;
+    margin: auto;
+    position: relative;
+    width: 90%;
+    display: grid;
+    place-items: center;
+    padding-left: 0;
+    padding-bottom: 0;
+    overflow: hidden;
+}
+
+.slide-container {
+    display: flex;
+    width: calc(280px*12);
+    animation: scroll 20s linear infinite;
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(calc(-280px * 6));
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -249,6 +302,329 @@
     }
 
     .teamImgH3 {
+        font-size: 18px !important;
+        font-weight: 600 !important;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.secondteamReveals {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 0.8s ease;
+}
+
+.secondteamReveals.active {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+@media screen and (min-device-width: 445px) and (max-device-width: 768px) {
+    .secondcarouselDiv {
+        width: 70% !important;
+    }
+}
+
+/* @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .App {
+        height: auto !important;
+    }
+} */
+
+@media screen and (max-width: 1280px) {
+    .secondteamCardDiv {
+        width: 70% !important;
+    }
+
+    .secondApp {
+        width: 95% !important;
+        /* background-color: red !important; */
+        margin-bottom: 50px !important;
+    }
+
+    .secondteamTextH1 {
+        font-size: 60px !important;
+        font-weight: 600 !important;
+        margin-top: 80px !important;
+        margin-bottom: -20px !important;
+    }
+
+    .secondteamText {
+        width: 90% !important;
+        margin-bottom: 50px !important;
+    }
+
+    .secondteamText h1 {
+        font-weight: 700 !important;
+    }
+
+    .secondteamText h4 {
+        font-weight: 500 !important;
+        font-size: 19px !important;
+    }
+
+    .secondteamImg {
+        width: 6px !important;
+        height: 90px !important;
+    }
+
+}
+
+@media screen and (min-width: 1281px) {
+    .secondteamCardDiv {
+        width: 60% !important;
+    }
+}
+
+@media screen and (min-width: 1648px) {
+    .secondteamCardDiv {
+        width: 45% !important;
+    }
+}
+
+/* For Tablet View */
+@media screen and (min-device-width: 768px) and (max-device-width: 1023px) {
+    .secondApp {
+        height: auto !important;
+        margin-top: 30px !important;
+    }
+
+    .secondteamCardDiv {
+        /* display: flex !important; */
+        width: 87% !important;
+        /* flex-wrap: wrap; */
+        /* justify-content: space-evenly; */
+    }
+
+    .secondteamTextH1 {
+        font-size: 60px !important;
+        font-weight: 600 !important;
+        margin-top: 0px !important;
+    }
+}
+
+@media screen and (min-device-width: 1024px) and (max-device-width: 1440px) {
+    .secondApp {
+        height: auto !important;
+        margin-bottom: 30px !important;
+
+        margin-top: 30px !important;
+    }
+
+    .secondteamCardDiv {
+        /* display: flex !important; */
+        width: 65% !important;
+        /* flex-wrap: wrap; */
+        /* justify-content: space-evenly; */
+    }
+}
+
+@media screen and (min-device-width: 1440px) and (max-device-width: 2560px) {
+    .secondApp {
+        /* height: auto !important; */
+        /* margin-bottom: 30px !important;
+
+        margin-top: 30px !important; */
+    }
+
+    .secondteamCardDiv {
+        /* display: flex !important; */
+        width: 65% !important;
+        /* flex-wrap: wrap; */
+        /* justify-content: space-evenly; */
+    }
+}
+
+.secondteamTopOneDiv {
+    background: linear-gradient(135deg, #d5fc39, #fff, #fff, #fff, #fff, #fff, #fff, #d5fc39);
+}
+
+
+.secondApp {
+    /* font-family: sans-serif; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    width: 85%;
+    margin: auto;
+}
+
+.secondteamText {
+    width: 70%;
+    margin-bottom: 30px;
+
+}
+
+.secondteamTextH1 {
+    font-size: 82px;
+    font-weight: 600;
+}
+
+.secondcarouselDiv {
+    display: none !important;
+
+}
+
+.secondteamCardDiv {
+    display: flex !important;
+    width: 53%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+}
+
+.secondaddIcon {
+    color: black;
+    display: flex;
+    align-self: self-end;
+    padding-top: 0;
+    padding-right: 15px;
+    font-size: 22px;
+}
+
+.secondteamImg {
+    width: 60px !important;
+    height: 70px !important;
+    /* float: left; */
+}
+
+.secondteamCardDesktop {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+    padding-left: 10px;
+    height: 220px;
+    width: 190px;
+    /* background-color: #00008b; */
+    background-color: #d5fc39;
+    color: #fff;
+    margin: 10px;
+    border-radius: 30px;
+    font-size: 4em;
+}
+
+.secondimageCard {
+    text-align: start;
+}
+
+.secondteamImgH3,
+.secondteamImgH6 {
+    color: black;
+}
+
+.secondinSlideCard {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    margin: auto;
+    overflow: hidden;
+}
+
+
+.secondslide-image {
+    transition: transform 1s;
+}
+
+.secondslide-image:hover {
+    transform: translateZ(20px);
+    opacity: 0.8;
+}
+
+.secondteam-container {
+    display: grid;
+    place-items: center;
+}
+
+.secondin-container {
+    height: 240px;
+    margin: auto;
+    position: relative;
+    width: 90%;
+    display: grid;
+    place-items: center;
+    padding-left: 0;
+    padding-bottom: 0;
+    overflow: hidden;
+}
+
+.secondslide-container {
+    display: flex;
+    width: calc(280px*12);
+    animation: secondscroll 20s linear infinite;
+}
+
+@keyframes secondscroll {
+    100% {
+        transform: translateX(0);
+    }
+
+    0% {
+        transform: translateX(calc(-280px * 6));
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .secondApp {
+        width: 95% !important;
+        /* background-color: red !important; */
+        height: 85vh !important;
+    }
+
+    .secondcarouselDiv {
+        display: flex !important;
+
+    }
+
+    .secondteamCardDiv {
+        display: none !important;
+    }
+
+
+    .secondteamTextH1 {
+        font-size: 40px !important;
+        font-weight: 600 !important;
+        margin-top: 40px !important;
+    }
+
+    .secondteamText {
+        width: 90% !important;
+        margin-bottom: 50px !important;
+    }
+
+    .secondteamText h1 {
+        font-weight: 700 !important;
+    }
+
+    .secondteamText h4 {
+        font-weight: 500 !important;
+        font-size: 19px !important;
+    }
+
+    .secondteamImg {
+        width: 80px !important;
+        height: 90px !important;
+    }
+
+    .secondteamImgH3 {
         font-size: 18px !important;
         font-weight: 600 !important;
     }
