--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,17 @@
 
 }
 
+@font-face {
+  font-family: myFont;
+  src: url(/PPTelegraf-Regular.otf);
+}
 
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: 'Darker Grotesque', sans-serif;
+  font-family: myFont;
+  /* font-family: 'Darker Grotesque', sans-serif; */
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
